[package]
name = "comb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev = { version = "0.12.1", features = ["tokio"] }
notify = { version = "5.1.0", default-features = false }
notify-debouncer-mini = "0.2.1"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.1"
xdg = "2.4.1"

